--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,15 @@
     <div class="window-body">
       <p>Search for a game:</p>
       <input id="searchBox" class="input" type="text" placeholder="Mario, Zelda, etc..." />
+      <div class="field-row">
+  <button id="searchBtn">Search</button>
+</div>
+
       <div class="result-container">
         <div id="results"></div>
       </div>
+      <div id="errorBox" class="alert-box" style="display:none; margin-top: 1rem; background: #fdd; padding: 0.5rem; border: 1px solid red;"></div>
+
     </div>
   </div>
 
